packages/toi/test/fixtures/invalid/missing-version.toi
{
  "$tier": "personal",
  "identity": {
    "author": "no version"
  }
}
